\name{NEWS}
\encoding{UTF-8}
\title{News for Package \pkg{kSamples}}
\section{Changes in version 1.2-10 (2023-10-07)}{
	\subsection{Minor Reference Fixes}{
		\itemize{
			\item Fixed a reference to an older package version.
			\item Updated the reference for "On Steel's Test with Ties."
  		}
	}
}
\section{Changes in version 1.2-8 (2018-06-02)}{
	\subsection{Bug Removal}{
		\itemize{
			\item Fixed a bug in data processing into list format,
			relevant to blocked data.
			\item Added some references to tests of similar nature
			and added a note about it.
  		}
	}
}
\section{Changes in version 1.2-8 (2018-06-02)}{
	\subsection{Version Synchronization}{
		\itemize{
			\item Fixed version synchronization in documentation.
  		}
	}
}
\section{Changes in version 1.2-7 (2017-08-10)}{
	\subsection{Bug report}{
		\itemize{
			\item Fixed a bug in formula input to list conversion. 
			Anomaly pointed out by Jose Ferreira.
  		}
	}
}
\section{Changes in version 1.2-6 (2017-06-14)}{
  \subsection{Memory management}{
    \itemize{
      \item In ad.test stack memory management was changed to heap memory,
      as suggested by Tomasz Melcer.
  }
 }
}