@@ -1,9 +1,9 @@
-66578dfab34fc243852a953f0c90aaf4 *DESCRIPTION
+5c0dfba32e7ff9d0b9580f6630a7acb3 *DESCRIPTION
 9b158965f51570da03c9d654b76db944 *NAMESPACE
 4c64c183f47e3f41ffe25dc0d88f4e07 *R/Harding.R
-e313845ee478bcaa2382697d214e619e *R/Steel.test.R
+42d85a9052b90122a49054c3bb9ef41d *R/Steel.test.R
 51714e3fb71ea3cd0f6b2262419e7ccd *R/SteelConfInt.R
-12c3ff797671dff5384337902e1c57f8 *R/Steelnormal.R
+ab051b5d03ddaec18939e6ce5c50ac0c *R/Steelnormal.R
 5c7b051d5a45292f700851ceb55be388 *R/Steelnormal0.R
 afe2c0d61dd08abc93589e3b097a47b3 *R/ad.pval.R
 1076a25be3c41fcab93736ffd462cc3f *R/ad.test.R
@@ -19,15 +19,15 @@ b89e3159e9f25e596605de179a5b7e1d *R/djt.R
 d04037e9a5453fb491cae38db3da5751 *R/na.remove.R
 9113dfc48a023decadbba16033220eda *R/pjt.R
 59ea9c12f53a47fad2a0c302c544ab71 *R/pp.kSamples.R
-c63b87dcb8252ec35a469adb3662e6e0 *R/print.kSamples.R
+f70d5404eb0413c3635b20a2cbb75bd0 *R/print.kSamples.R
 011a519ff05381c1524a7f311286f9c9 *R/qjt.R
 adbaf82af612fc0cf705c8563da21dc3 *R/qn.test.R
 2f865dcb0654adaa84c6c2c71d40edb7 *R/qn.test.combined.R
 e7c6e7d2aad1c6f7ffa87743f9c5aab5 *R/test.list.R
 ec378c8638881be52ca3784d16101578 *data/ShorelineFireEMS.rda
-ab0fac65d17547df52d7676aad075f17 *inst/NEWS.Rd
+871aa02d01f75100f2e65332a5811b72 *inst/NEWS.Rd
 496d2c8396d0b721bb7457917957760a *man/ShorelineFireEMS.Rd
-2c260cd34073293a3a64c06f627060f3 *man/Steel.test.Rd
+e4de705a97c49d2810925e5c20a0bfb2 *man/Steel.test.Rd
 6a96f55f7a3cc0dd46d811e12ed499e4 *man/SteelConfInt.Rd
 2b9475a4a5902b9c1f1af953e11ff8ba *man/ad.pval.Rd
 ea3edf5c9b778c3a2ebccf9292eacad5 *man/ad.test.Rd
@@ -41,5 +41,5 @@ e0512a74ce3a5ab5e7a67802d1c6dfbe *man/kSamples-package.Rd
 8a6a281da26180cffbbf51102c25ce06 *man/pp.kSamples.Rd
 68faa176d8f8e9193add70b2c29e4425 *man/qn.test.Rd
 d71a387a6f492885d9369cf14102eaca *man/qn.test.combined.Rd
-a19c755fd44a3129fb06841b69978359 *src/kSamples.c
+49267c1e2dc2e9a31669a420170b2403 *src/kSamples.c
 f15b6fd29a344f0f5824e876ac5129dd *src/myfuns.h
